--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <div class="contact-card">
     <h4>お問い合わせ・ご相談</h4>
     <p style="font-size: 0.95rem; color: #555;">改造依頼や適合相談など、専用フォームより受け付けております。</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfS-rO-nC56xR8vD9fFzXzX-rO-nC56xR8vD9fFzXzX-rO/viewform" target="_blank" class="btn-main">お問い合わせフォームを開く</a>
+    <a href="https://www.toyhospital.org/gpsyougaiji" target="_blank" class="btn-main">お問い合わせフォームを開く</a>
     <div class="contact-info">
       メール：<strong>seigou.fthp@gmail.com</strong>
     </div>
@@ -208,7 +208,7 @@
 
 <div class="container spacer extra-link">
   <p>日本おもちゃ病院協会<br>
-  <a href="https://sites.google.com/view/fthp/home#h.5nlb2jog9gmp" target="_blank">障がい児の遊び支援活動 ホームページ</a></p>
+  <a href="https://www.toyhospital.org/gpsyougaiji" target="_blank">障がい児の遊び支援活動 ホームページ</a></p>
 </div>
 
 <footer>
