--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <div class="contact-card">
     <h4>お問い合わせ・ご相談</h4>
     <p style="font-size: 0.95rem; color: #555;">改造依頼や適合相談など、専用フォームより受け付けております。</p>
-    <a href="https://www.toyhospital.org/gpsyougaiji" target="_blank" class="btn-main">お問い合わせフォームを開く</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdwMBTXesjuvbcc9HRLgEcxVlZjM-tvacvGCBu-b4JxKqdrrQ/viewform" target="_blank" class="btn-main">お問い合わせフォームを開く</a>
     <div class="contact-info">
       メール：<strong>seigou.fthp@gmail.com</strong>
     </div>
