リンク先のURL修正

--- a/funabashi-top.html
+++ b/funabashi-top.html
@@ -195,20 +195,20 @@
 <div class="container">
     <section class="hero">
         <div class="hero-img-container">
-            <img src="/images/main_visual.jpg" alt="活動の様子">
+            <img src="https://funabashtoyhospital.web.fc2.com/121202_1423~0001.jpg" alt="活動の様子">
         </div>
         <div class="hero-text">
             <h1>大切なおもちゃを、<br>心を込めて直します。</h1>
             <p>壊れて動かなくなった、音が出なくなった…。<br>あきらめる前に、私たちドクターに相談してください。</p>
         </div>
-        <a href="https://funabashtoyhospital.web.fc2.com/newpage2.html" class="cta-button">最新の開院スケジュールを確認する</a>
+        <a href="https://funabashtoyhospital.web.fc2.com/yotei.html" class="cta-button">最新の開院スケジュールを確認する</a>
     </section>
 
     <div class="quick-nav">
-        <a href="#about" class="nav-btn">病院紹介</a>
-        <a href="#rules" class="nav-btn">修理のルール</a>
+        <a href="https://funabashtoyhospital.web.fc2.com/syoukai.html" class="nav-btn">病院紹介</a>
+        <a href="https://funabashtoyhospital.web.fc2.com/yotei.html" class="nav-btn">修理のルール</a>
         <a href="#location" class="nav-btn">場所・アクセス</a>
-        <a href="https://funabashtoyhospital.web.fc2.com/newpage6.html" class="nav-btn">スタッフ募集</a>
+        <a href="https://funabashtoyhospital.web.fc2.com/syoukai.html" class="nav-btn">スタッフ募集</a>
     </div>
 
     <section class="news-box">
@@ -254,7 +254,7 @@
                     <li>法的に規制のあるもの（エアガン、ガスガンなど）</li>
                     <li>直接人体に触れるもの（浮き輪、電動歯ブラシなど）</li>
                     <li>AC100Vに直結する家電製品</li>
-                    <li>骨董的価値のあるもの、高価なもの</li>
+                    <li>骨董的価値のあるもの、高額なもの</li>
                     <li>テレビゲーム機、パソコン、スマートフォンなど</li>
                     <li>その他、ドクターが修理困難と判断したもの</li>
                 </ul>
@@ -314,7 +314,7 @@
         <div class="card" style="background:var(--secondary-color); color:white;">
             <h3>ドクター・スタッフ募集中！</h3>
             <p style="margin:10px 0;">おもちゃの修理に興味がある方、ボランティアとして一緒に活動しませんか？技術がなくても、受付などのお手伝いも大歓迎です。</p>
-            <a href="https://funabashtoyhospital.web.fc2.com/newpage6.html" style="color:white; text-decoration:underline; font-weight:bold;">募集案内の詳細を見る</a>
+            <a href="https://funabashtoyhospital.web.fc2.com/syoukai.html" style="color:white; text-decoration:underline; font-weight:bold;">募集案内の詳細を見る</a>
         </div>
     </section>
 </div>
@@ -323,10 +323,10 @@
     <div class="container">
         <div class="footer-links">
             <a href="https://funabashtoyhospital.web.fc2.com/index.html">ホーム</a>
-            <a href="https://funabashtoyhospital.web.fc2.com/newpage2.html">開院予定</a>
-            <a href="https://funabashtoyhospital.web.fc2.com/newpage3.html">修理規定</a>
-            <a href="https://funabashtoyhospital.web.fc2.com/newpage5.html">活動の記録</a>
-            <a href="https://funabashtoyhospital.web.fc2.com/newpage6.html">スタッフ募集</a>
+            <a href="https://funabashtoyhospital.web.fc2.com/yotei.html">開院予定</a>
+            <a href="https://funabashtoyhospital.web.fc2.com/syoukai.html">スタッフ紹介</a>
+            <a href="https://funabashtoyhospital.web.fc2.com/R5-houkoku.html">活動の記録(R5〜)</a>
+            <a href="https://funabashtoyhospital.web.fc2.com/R2-houkoku.html">活動の記録(R元〜R4)</a>
         </div>
         <p>事務局：船橋市社会福祉協議会 ボランティアセンター内</p>
         <p class="copyright">© ふなばしおもちゃ病院 All Rights Reserved.</p>
