--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     .logo { font-weight: bold; color: var(--main); font-size: 1.1rem; }
 
     /* --- ヒーロー --- */
-    .hero {
-      background: url("images/hero.jpg") no-repeat center 40% / cover;
+   .hero {
+      background: url("https://drive.google.com/uc?export=view&id=1IEeUfNWuZSAsxADdb_9cs91PuAjxMaCG")
+              no-repeat center 40% / cover;
       height: 250px;
       display: flex;
       align-items: center;
