--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
     /* --- ヒーロー --- */
    .hero {
-      background: url("https://drive.google.com/uc?export=view&id=1IEeUfNWuZSAsxADdb_9cs91PuAjxMaCG")
-              no-repeat center 40% / cover;
+      background: url("images/hero.jpg") no-repeat center 40% / cover;
       height: 250px;
       display: flex;
       align-items: center;
