--- a/funabashi-top.html
+++ b/funabashi-top.html
@@ -186,7 +186,7 @@
 <header>
     <div class="container">
         <div class="header-logo">
-            <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ff8c00'><path d='M20 6h-4V4c0-1.1-.9-2-2-2h-4c-1.1 0-2 .9-2 2v2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zM10 4h4v2h-4V4zm10 16H4V8h16v12zM11 10h2v3h3v2h-3v3h-2v-3H8v-2h3z'/></svg>" width="30" alt="logo">
+            <img src="images/activity_image.jpg" width="30" alt="logo">
             ふなばしおもちゃ病院
         </div>
     </div>
