--- a/funabashi-top.html
+++ b/funabashi-top.html
@@ -214,7 +214,7 @@
     <section class="hero">
         <div class="hero-img-container">
             <!-- 横長にトリミング表示されるように調整 -->
-            <img src="https://funabashi-toy-hospital.com/images/IMG_3489.JPG" onerror="this.src='https://placehold.jp/24/ff8c00/ffffff/800x300.png?text=%E6%B4%BB%E5%8B%95%E9%A2%A8%E6%99%AF'" alt="活動風景">
+            <img src="images/acitivity_image.jpg" alt="活動風景">
         </div>
         <div class="hero-text">
             <h1>大切なおもちゃを、<br>心を込めて直します。</h1>
