--- a/funabashi-top.html
+++ b/funabashi-top.html
@@ -214,7 +214,7 @@
     <section class="hero">
         <div class="hero-img-container">
             <!-- 横長にトリミング表示されるように調整 -->
-            <img src="images/acitivity_image.jpg" alt="活動風景">
+            <img src="images/activity_image.jpg" alt="活動風景">
         </div>
         <div class="hero-text">
             <h1>大切なおもちゃを、<br>心を込めて直します。</h1>
