--- a/funabashi-top.html
+++ b/funabashi-top.html
@@ -191,11 +191,11 @@
 <div class="container">
 
     <nav class="nav-grid">
-        <div class="nav-item"><a data-link-id="l001" class="btn-link">スタッフ</a></div>
-        <div class="nav-item"><a data-link-id="l002" class="btn-link">診断、修理</a></div>
-        <div class="nav-item"><a data-link-id="l003" class="btn-link">予定日</a></div>
-        <div class="nav-item"><a data-link-id="l004" class="btn-link">問い合せ</a></div>
-        <div class="nav-item"><a data-link-id="l005" class="btn-link">リンク</a></div>
+        <div class="nav-item"><a href="syoukai.html" class="btn-link">スタッフ</a></div>
+        <div class="nav-item"><a href="shindan.html" class="btn-link">診断、修理</a></div>
+        <div class="nav-item"><a href="yotei.html" class="btn-link">予定日</a></div>
+        <div class="nav-item"><a href="toiawase.html" class="btn-link">問い合せ</a></div>
+        <div class="nav-item"><a href="link.html" class="btn-link">リンク</a></div>
     </nav>
 
     <section>
@@ -218,7 +218,7 @@
         <div style="background: #fff9c4; padding: 15px; border-radius: 8px; margin-bottom: 15px;">
             <strong>お知らせ</strong><br>
             当病院活動はYou Tubeで公開されてます。
-            <a data-link-id="l011">船橋おもちゃ病院youtube</a> で
+            <a href="https://www.bing.com/videos/search?q=%e8%88%b9%e6%a9%8b%e3%81%8a%e3%82%82%e3%81%a1%e3%82%83%e7%97%85%e9%99%a2You+tube&docid=603504172827021857&mid=45D5816FF8EE0C67F22445D5816FF8EE0C67F224&view=detail&FORM=VIRE">船橋おもちゃ病院youtube</a> で
         </div>
         <ul style="font-size: 0.95rem; padding-left: 20px;">
             <li>2025.6.診断・修理に受付できないおもちゃを追記</li>
@@ -242,17 +242,17 @@
     <section>
         <h2>修理のご相談</h2>
         <p>
-            船橋市内各所（<a data-link-id="l016">開催予定</a>をご覧ください）で、定期的に、おもちゃの修理（活動報告をご覧ください）を行っています。お持ちください。
+            船橋市内各所（<a href="yotei.html">開催予定</a>をご覧ください）で、定期的に、おもちゃの修理（活動報告をご覧ください）を行っています。お持ちください。
         </p>
         
         <div class="contact-box">
             <strong>開催場所に来ること出来ない場合</strong><br>
-            当ホームページの「問い合わせ」 <a data-link-id="l013">メール</a>をご利用ください。個別対応いたします。
+            当ホームページの「問い合わせ」 <a href="toiawase.html">メール</a>をご利用ください。個別対応いたします。
             <br><br>
             <strong>【問い合わせ時の必要事項】</strong><br>
             おもちゃ名、住所、氏名、電話番号をお願いします。
             <br><br>
-            その他,おもちゃに関してお困りの事、相談したい事が有りましたら御気軽に <a data-link-id="l014">メール、電話</a> で問い合わせください。
+            その他,おもちゃに関してお困りの事、相談したい事が有りましたら御気軽に <a href="toiawase.html">メール、電話</a> で問い合わせください。
         </div>
 
         <div class="important-note">
@@ -278,27 +278,27 @@
 
         <p style="font-size: 0.9rem; margin-top: 20px;">
             当グループは全国組織の,『日本おもちゃ病院協会』,近隣の、『鎌ケ谷おもちゃ病院』、『行徳おもちゃの病院』、別の活動とて『障害児に遊ぶ楽しさを支援する活動』 とリンクしてます。 
-            <a data-link-id="l015">リンク</a> からご覧ください。
+            <a href="link.html">リンク</a> からご覧ください。
         </p>
         <p style="font-size: 0.9rem;">
             運営に当たってはボランティア活動の為、原則無料ですが修理に要した部品は実費を戴く場合もあります。
-            活動場所については <a data-link-id="l016">開催予定</a> をごらんください。
+            活動場所については <a href="yotei.html">開催予定</a> をごらんください。
         </p>
     </section>
 
     <section>
         <h2>過去の活動報告</h2>
         <div class="report-links">
-            <a data-link-id="l006">H25/6～H29/11 活動報告</a>
-            <a data-link-id="l007">H29/12～H31/4 活動報告</a>
-            <a data-link-id="l008">R元/5～R4/12 活動報告</a>
-            <a data-link-id="l009">R5/1～R/ 活動報告</a>
+            <a href="houkoku.html">H25/6～H29/11 活動報告</a>
+            <a href="29-12houkoku.html">H29/12～H31/4 活動報告</a>
+            <a href="R2-houkoku.html">R元/5～R4/12 活動報告</a>
+            <a href="R5-houkoku.html">R5/1～R/ 活動報告</a>
         </div>
     </section>
 
     <div class="footer-meta">
         更新日 2026-1-11<br>
-        <a data-link-id="l010">アクセスカウンター</a>
+        <a href="http://www.rays-counter.com/">アクセスカウンター</a>
     </div>
 
 </div>
