--- a/funabashi-top.html
+++ b/funabashi-top.html
@@ -3,304 +3,305 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ふなばし「おもちゃの病院」</title>
+    <title>ふなばし「おもちゃの病院」公式サイト</title>
     <style>
         :root {
-            --primary-color: #00796b; /* 信頼感のあるティール */
-            --accent-color: #ff6f00; /* 親しみやすいオレンジ */
-            --bg-color: #fafafa;
+            --primary-color: #008080; /* Teal */
+            --secondary-color: #ff69b4; /* Fuchsia */
+            --accent-color: #ff8c00; /* Dark Orange */
+            --bg-color: #fffaf0; /* Floral White */
+            --text-color: #333;
             --card-bg: #ffffff;
-            --text-main: #333333;
-            --text-sub: #666666;
             --border-radius: 12px;
         }
 
-        * { box-sizing: border-box; }
-
+        * { box-sizing: border-box; margin: 0; padding: 0; }
         body {
-            font-family: "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+            font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
             background-color: var(--bg-color);
-            color: var(--text-main);
-            line-height: 1.8;
-            margin: 0;
-            padding: 0;
-            font-size: 18px; /* 高齢者配慮：大きめの文字 */
+            color: var(--text-color);
+            line-height: 1.6;
+            padding-bottom: 40px;
         }
 
-        /* ヘッダー */
+        /* アクセシビリティ：大きな文字とコントラスト */
+        h1, h2, h3 { line-height: 1.3; }
+        p, li { font-size: 1.1rem; }
+
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+
+        /* ヘッダーセクション */
         header {
-            background-color: var(--primary-color);
-            color: white;
             text-align: center;
             padding: 40px 20px;
-            border-bottom: 6px solid var(--accent-color);
-        }
-
-        .hospital-name {
-            font-size: 1.8rem;
-            font-weight: bold;
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        .slogan {
-            font-size: 1.1rem;
-            display: block;
-            opacity: 0.9;
-        }
-
-        /* 共通レイアウト */
-        .container {
-            max-width: 700px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        section {
-            background: var(--card-bg);
-            border-radius: var(--border-radius);
-            padding: 25px;
+            background: linear-gradient(135deg, var(--primary-color), #005f5f);
+            color: white;
+            border-radius: 0 0 var(--border-radius) var(--border-radius);
             margin-bottom: 30px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
         }
+        .logo-svg { width: 80px; height: 80px; margin-bottom: 15px; fill: white; }
+        header h1 { font-size: 2rem; margin-bottom: 10px; }
+        header p { font-size: 1.2rem; font-weight: bold; }
 
-        h2 {
-            color: var(--primary-color);
-            font-size: 1.4rem;
-            border-left: 6px solid var(--accent-color);
-            padding-left: 15px;
-            margin-top: 0;
-            margin-bottom: 20px;
-        }
-
-        /* ナビゲーションメニュー */
-        .nav-grid {
+        /* ナビゲーション */
+        nav {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-            gap: 12px;
+            gap: 10px;
             margin-bottom: 30px;
         }
-
-        .nav-item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: white;
+        nav a {
+            background: var(--card-bg);
+            padding: 15px;
+            text-align: center;
+            text-decoration: none;
+            color: var(--primary-color);
             border: 2px solid var(--primary-color);
             border-radius: var(--border-radius);
-            padding: 12px 5px;
             font-weight: bold;
-            text-align: center;
-            transition: all 0.3s;
+            cursor: pointer;
+            transition: all 0.2s;
         }
+        nav a:active { background: var(--primary-color); color: white; }
 
-        /* 開催予定カード */
-        .event-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .event-item {
-            background: #fff8f0;
-            border-left: 4px solid var(--accent-color);
-            padding: 15px;
-            margin-bottom: 10px;
-            font-family: monospace;
-            font-size: 0.95rem;
-        }
-
-        /* お問い合わせボックス */
-        .contact-box {
-            background: #e0f2f1;
-            padding: 20px;
+        /* セクション共通 */
+        section {
+            background: var(--card-bg);
+            padding: 25px;
             border-radius: var(--border-radius);
-            border: 2px dashed var(--primary-color);
+            margin-bottom: 30px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            border-left: 8px solid var(--primary-color);
         }
+        h2 {
+            font-size: 1.5rem;
+            color: var(--primary-color);
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .section-icon { width: 32px; height: 32px; fill: var(--primary-color); }
 
-        /* 統計データ */
+        /* お知らせ・更新情報 */
+        .notice-box {
+            background: #fff0f5;
+            border: 2px dashed var(--secondary-color);
+            padding: 15px;
+            border-radius: var(--border-radius);
+            margin-top: 15px;
+        }
+        .update-date { font-weight: bold; color: #666; display: block; margin-bottom: 10px; }
+
+        /* 開催予定リスト */
+        .schedule-list { list-style: none; }
+        .schedule-item {
+            padding: 15px 0;
+            border-bottom: 1px solid #eee;
+        }
+        .schedule-item:last-child { border-bottom: none; }
+        .date-tag {
+            display: inline-block;
+            background: var(--accent-color);
+            color: white;
+            padding: 2px 10px;
+            border-radius: 4px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .location { font-weight: bold; font-size: 1.2rem; display: block; }
+
+        /* 実績・統計 */
         .stats-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 15px;
-            background: #f1f8e9;
-            padding: 20px;
+            margin: 20px 0;
+        }
+        .stat-card {
+            background: #e0f2f1;
+            padding: 15px;
             border-radius: var(--border-radius);
+            text-align: center;
         }
+        .stat-value { font-size: 1.6rem; font-weight: bold; color: var(--primary-color); display: block; }
+        .stat-label { font-size: 0.9rem; color: #555; }
 
-        .stat-val {
+        /* リンクボタン */
+        .link-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background: var(--primary-color);
+            color: white;
+            text-decoration: none;
+            border-radius: 30px;
             font-weight: bold;
-            color: var(--primary-color);
-            font-size: 1.1rem;
+            margin-top: 10px;
         }
 
-        /* 報告書リンク */
-        .report-links {
+        /* フッター */
+        footer {
+            text-align: center;
+            padding: 20px;
             font-size: 0.9rem;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
+            color: #777;
         }
 
-        /* リンク共通設定 */
-        a {
-            color: #0056b3;
+        /* リンク風のスタイル */
+        a[data-link-id] {
+            color: var(--primary-color);
             text-decoration: underline;
             cursor: pointer;
-        }
-
-        .btn-link {
-            text-decoration: none;
-            color: var(--primary-color);
-        }
-
-        .important-note {
-            color: #d32f2f;
             font-weight: bold;
-            border: 2px solid #d32f2f;
-            padding: 10px;
-            border-radius: 8px;
-            margin-top: 15px;
         }
 
-        .footer-meta {
-            text-align: right;
-            font-size: 0.8rem;
-            color: var(--text-sub);
-            padding: 20px;
-        }
-
-        /* SVGイラスト */
-        .icon {
-            width: 48px;
-            height: 48px;
-            margin: 0 auto 10px;
-            display: block;
+        @media (max-width: 600px) {
+            header h1 { font-size: 1.6rem; }
+            section { padding: 15px; }
+            .stats-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
 <body>
 
-<header>
-    <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-        <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.77 3.77z"/>
-    </svg>
-    <span class="hospital-name">ふなばし　「おもちゃの病院」</span>
-    <span class="slogan">---　治して、そして、また遊ぼう(*^-^*)!　---</span>
-</header>
-
 <div class="container">
+    <header>
+        <svg class="logo-svg" viewBox="0 0 24 24">
+            <path d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.11 3.89,21 5,21H19C20.11,21 21,20.11 21,19V5C21,3.89 20.11,3 19,3M19,19H5V5H19V19M11,7H13V11H17V13H13V17H11V13H7V11H11V7Z"/>
+        </svg>
+        <h1>ふなばし　「おもちゃの病院」</h1>
+        <p>---　治して、そして、また遊ぼう(*^-^*)!　---</p>
+    </header>
 
-    <nav class="nav-grid">
-        <div class="nav-item"><a href="syoukai.html" class="btn-link">スタッフ</a></div>
-        <div class="nav-item"><a href="shindan.html" class="btn-link">診断、修理</a></div>
-        <div class="nav-item"><a href="yotei.html" class="btn-link">予定日</a></div>
-        <div class="nav-item"><a href="toiawase.html" class="btn-link">問い合せ</a></div>
-        <div class="nav-item"><a href="link.html" class="btn-link">リンク</a></div>
+    <nav>
+        <a data-link-id="l001">スタッフ</a>
+        <a data-link-id="l002">診断、修理</a>
+        <a data-link-id="l003">予定日</a>
+        <a data-link-id="l004">問い合せ</a>
+        <a data-link-id="l005">リンク</a>
     </nav>
 
     <section>
-        <p>
-            高価なおもちゃが多い中、壊れてたり故障などであきらめているもの有りませんか？
-            物を大切にする気持ちを子供たちに教え、感じてもらうために、復旧して再び動く喜びを味わってみようではありませんか。
-        </p>
-        <p>
-            ふなばし「おもちゃの病院」は <strong>♯壊れたおもちゃを修理 復元する活動を行っているボランティアグループ</strong>です。
-        </p>
-        <p>
-            お父さん、お母さんが使っていた懐かしのおもちゃ、メモリアル的なおもちゃ、プレゼントされたり、買い与えたが壊れてしまい困っているおもちゃ等、押入れ、 タンス、段ボール箱に有りませんか？
-            ベテランドクターが原則無料（修理に要した部品代100～200円程度は実費で戴く場合もあります）で修理いたします。
-            再び動かし感動を味わいましょう。
-        </p>
+        <h2>
+            <svg class="section-icon" viewBox="0 0 24 24"><path d="M12,2L1,21H23L12,2M12,6L19.53,19H4.47L12,6M11,10V14H13V10H11M11,16V18H13V16H11Z"/></svg>
+            御案内及び更新情報
+        </h2>
+        <span class="update-date">更新日：2026-1-11</span>
+        <div class="notice-box">
+            <p><strong>お知らせ：</strong></p>
+            <ul>
+                <li>当病院活動は <a data-link-id="l011">船橋おもちゃ病院youtube</a> で公開されています</li>
+                <li>2025.6. 診断・修理に受付できないおもちゃを追記しました</li>
+                <li>2026/1/31 ふなばし市民活動フェアーに参加します（船橋FACSにて）</li>
+            </ul>
+        </div>
     </section>
 
     <section>
-        <h2>==御案内及び更新情報==</h2>
-        <div style="background: #fff9c4; padding: 15px; border-radius: 8px; margin-bottom: 15px;">
-            <strong>お知らせ</strong><br>
-            当病院活動はYou Tubeで公開されてます。
-            <a href="https://www.bing.com/videos/search?q=%e8%88%b9%e6%a9%8b%e3%81%8a%e3%82%82%e3%81%a1%e3%82%83%e7%97%85%e9%99%a2You+tube&docid=603504172827021857&mid=45D5816FF8EE0C67F22445D5816FF8EE0C67F224&view=detail&FORM=VIRE">船橋おもちゃ病院youtube</a> で
-        </div>
-        <ul style="font-size: 0.95rem; padding-left: 20px;">
-            <li>2025.6.診断・修理に受付できないおもちゃを追記</li>
-            <li>2026/1/31 ふなばし市民活動フェアーに参加します（船橋FACSにて）</li>
+        <h2>
+            <svg class="section-icon" viewBox="0 0 24 24"><path d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.11,3 19,3H18V1M17,12H12V17H17V12Z"/></svg>
+            1月の開催予定
+        </h2>
+        <ul class="schedule-list">
+            <li class="schedule-item">
+                <span class="date-tag">1月17日（土) 9:30～12:00</span>
+                <span class="location">船橋市西部公民館</span>
+            </li>
+            <li class="schedule-item">
+                <span class="date-tag">1月17日（土) 9:30～12:00</span>
+                <span class="location">坪井公民館</span>
+            </li>
+            <li class="schedule-item">
+                <span class="date-tag">1月18日（日) 9:30～12:00</span>
+                <span class="location">小室公民館</span>
+            </li>
+            <li class="schedule-item">
+                <span class="date-tag">1月24日（土) 13:30～15:30</span>
+                <span class="location">ウェルシア藤原店</span>
+            </li>
+            <li class="schedule-item">
+                <span class="date-tag">2月1日（日) 10:00～15:00</span>
+                <span class="location">八千代緑が丘イオンモール</span>
+                <p><small>※開催場所がローズ広場から4階エスカレータ脇に変わります</small></p>
+            </li>
+            <li class="schedule-item">
+                <span class="date-tag">2月14日（土) 9:30～12:00</span>
+                <span class="location">金杉台児童ホーム / 三咲公民館</span>
+            </li>
         </ul>
-    </section>
-
-    <section>
-        <h2>1月の 開催予定</h2>
-        <div class="event-list">
-            <div class="event-item">****1月17日（土) 9時30分～12時..船橋市西部公民館。</div>
-            <div class="event-item">****1月17日（土) 9時30分～12時..、坪井公民館。</div>
-            <div class="event-item">****1月18日（日) 9時30分～12時..、小室公民館</div>
-            <div class="event-item">****1月24日（土) 13時30分～15時30分..、ウェルシア藤原店</div>
-            <div class="event-item">****2月1日（日) 10時～15時..、八千代緑が丘イオンモール（,開催場所がローズ広場から4階のエスカレータ脇に変わります)</div>
-            <div class="event-item">****2月14日（土) 9時30分～12時..、金杉台児童ホーム</div>
-            <div class="event-item">****2月14日（土) 9時30分～12時..、三咲公民館</div>
-        </div>
-    </section>
-
-    <section>
-        <h2>修理のご相談</h2>
-        <p>
-            船橋市内各所（<a href="yotei.html">開催予定</a>をご覧ください）で、定期的に、おもちゃの修理（活動報告をご覧ください）を行っています。お持ちください。
+        <p style="margin-top:15px; font-size:0.95rem;">
+            会場に来られない方の修理相談は <a data-link-id="l012">メール</a> にて個別対応いたします。お名前、住所、電話番号、おもちゃ名を明記してください。
         </p>
-        
-        <div class="contact-box">
-            <strong>開催場所に来ること出来ない場合</strong><br>
-            当ホームページの「問い合わせ」 <a href="toiawase.html">メール</a>をご利用ください。個別対応いたします。
-            <br><br>
-            <strong>【問い合わせ時の必要事項】</strong><br>
-            おもちゃ名、住所、氏名、電話番号をお願いします。
-            <br><br>
-            その他,おもちゃに関してお困りの事、相談したい事が有りましたら御気軽に <a href="toiawase.html">メール、電話</a> で問い合わせください。
-        </div>
+    </section>
 
-        <div class="important-note">
-            【ご注意】購入後使用期間が数か月でメーカー、購入先の保証のあるもは、ご自身でメーカー等に問い合わせください。当院では修理できなくて困っているおもちゃに限って承ります。
+    <section>
+        <h2>
+            <svg class="section-icon" viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.41,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.59,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"/></svg>
+            私たちの想い
+        </h2>
+        <p>
+            物を大切にする気持ちを子供たちに教え、復旧して再び動く喜びを味わってみませんか？
+            ふなばし「おもちゃの病院」は、壊れたおもちゃの修理・復元を行うボランティアグループです。
+        </p>
+        <div class="notice-box" style="background:#e8f5e9; border-color:var(--primary-color);">
+            <p><strong>修理について：</strong></p>
+            <ul>
+                <li><strong>原則無料：</strong> 修理代は無料です（部品代100〜200円程度の実費を頂く場合があります）。</li>
+                <li><strong>ベテランドクター：</strong> 確かな技術で修理いたします。</li>
+                <li><strong>ご注意：</strong> 購入数ヶ月以内のメーカー保証期間内のものは、まずメーカーへお問い合わせください。</li>
+            </ul>
         </div>
     </section>
 
     <section>
-        <h2>組織の紹介</h2>
-        <p>
-            2006年から病院を開院しております船橋のボランティアグループです。所定の講習修了者（おもちゃドクター21名内女医3名)で活動し、高い完治率を達成してます。
-        </p>
+        <h2>
+            <svg class="section-icon" viewBox="0 0 24 24"><path d="M16,13C15.71,13 15.38,13 15.03,13.05C16.19,13.89 17,15 17,16.5V19H23V16.5C23,14.2 19.33,13 16,13M8,13C4.67,13 1,14.2 1,16.5V19H15V16.5C15,14.2 11.33,13 8,13M8,11A3,3 0 0,0 11,8A3,3 0 0,0 8,5A3,3 0 0,0 5,8A3,3 0 0,0 8,11M16,11A3,3 0 0,0 19,8A3,3 0 0,0 16,5A3,3 0 0,0 13,8A3,3 0 0,0 16,11Z"/></svg>
+            組織の紹介
+        </h2>
+        <p>2006年に開院。21名のおもちゃドクター（うち女性3名）が活動しています。</p>
         
         <div class="stats-grid">
-            <div>2023年 開催実績<br><span class="stat-val">85回</span></div>
-            <div>参加ドクター数<br><span class="stat-val">延べ671人</span></div>
-            <div>依頼実績<br><span class="stat-val">1890件</span></div>
-            <div>修理不可<br><span class="stat-val">40件</span></div>
-            <div style="grid-column: span 2; text-align: center; border-top: 1px solid #ccc; padding-top: 10px;">
-                完治率 <span class="stat-val" style="font-size: 1.5rem;">97.8%</span>
+            <div class="stat-card">
+                <span class="stat-value">97.8%</span>
+                <span class="stat-label">修理完治率(2023年)</span>
+            </div>
+            <div class="stat-card">
+                <span class="stat-value">1,890件</span>
+                <span class="stat-label">年間依頼実績</span>
+            </div>
+            <div class="stat-card">
+                <span class="stat-value">85回</span>
+                <span class="stat-label">年間開催実績</span>
+            </div>
+            <div class="stat-card">
+                <span class="stat-value">671人</span>
+                <span class="stat-label">延べ参加ドクター数</span>
             </div>
         </div>
 
-        <p style="font-size: 0.9rem; margin-top: 20px;">
-            当グループは全国組織の,『日本おもちゃ病院協会』,近隣の、『鎌ケ谷おもちゃ病院』、『行徳おもちゃの病院』、別の活動とて『障害児に遊ぶ楽しさを支援する活動』 とリンクしてます。 
-            <a href="link.html">リンク</a> からご覧ください。
-        </p>
-        <p style="font-size: 0.9rem;">
-            運営に当たってはボランティア活動の為、原則無料ですが修理に要した部品は実費を戴く場合もあります。
-            活動場所については <a href="yotei.html">開催予定</a> をごらんください。
+        <p style="font-size: 0.95rem;">
+            日本おもちゃ病院協会、近隣の鎌ケ谷・行徳おもちゃ病院、障害児支援活動とも連携しています。
+            詳細は <a data-link-id="l014">リンク</a> をご覧ください。
         </p>
     </section>
 
-    <section>
-        <h2>過去の活動報告</h2>
-        <div class="report-links">
-            <a href="houkoku.html">H25/6～H29/11 活動報告</a>
-            <a href="29-12houkoku.html">H29/12～H31/4 活動報告</a>
-            <a href="R2-houkoku.html">R元/5～R4/12 活動報告</a>
-            <a href="R5-houkoku.html">R5/1～R/ 活動報告</a>
+    <section style="border-left-color: var(--secondary-color);">
+        <h2>活動報告アーカイブ</h2>
+        <nav style="grid-template-columns: 1fr 1fr;">
+            <a data-link-id="l006">H25/6～H29/11</a>
+            <a data-link-id="l007">H29/12～H31/4</a>
+            <a data-link-id="l008">R元/5～R4/12</a>
+            <a data-link-id="l009">R5/1～現在</a>
+        </nav>
+    </section>
+
+    <footer>
+        <p>ふなばし「おもちゃの病院」</p>
+        <p>ご相談はお気軽に <a data-link-id="l013">メール・電話</a> にて</p>
+        <div style="margin-top:10px;">
+            <a data-link-id="l010">アクセスカウンター</a>
         </div>
-    </section>
-
-    <div class="footer-meta">
-        更新日 2026-1-11<br>
-        <a href="http://www.rays-counter.com/">アクセスカウンター</a>
-    </div>
-
+    </footer>
 </div>
 
 </body>
